<resources>
    <string name="app_name">TD3FragmentsGiraldo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
    <string name="fragment4">Fragment 4</string>
    <string name="imageTitle">Titre : </string>
    <string name="imageAuthor">Author : </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>

</resources>
