<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/imageTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/imageTitle" />

                <TextView
                    android:id="@+id/imageAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/imageAuthor" />

                <ImageView
                    android:id="@+id/imageViewFlickr"
                    android:layout_width="match_parent"
                    android:layout_height="205dp"
                    android:contentDescription="@string/todo"
                    tools:src="@tools:sample/avatars" />
            </LinearLayout>


</LinearLayout>